# Spring

./: README.md
Gwidget/: CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.419d680  CMakeLists.txt.user.5a9f405.22  comp.cpp  comp.h  createdata.cpp  createdata.h  dragbutton.cpp  dragbutton.h  exer.cpp  exer.h  explanation.cpp  explanation.h  generate.cpp  getmap.cpp  getmap.h  getmap.ui  getmap2.cpp  getmap2.h  getmap2.ui  gwidget.cpp  gwidget.h  gwidget.ui  ico.rc  image.qrc  legalmap.cpp  legalmap.h  main.cpp  map.txt  optionbutton.cpp  optionbutton.h  pasword.cpp  pasword.h  pramodedialog.cpp  pramodedialog.h  pramodedialog.ui  rank.cpp  rank.h  (+12 more)
Gwidget/images/: LegalMap.txt  bochi.avif  bochi.xmp
Gwidget/map/: map1.txt  map2.txt
Gwidget/rank/: success.json
